--- a/subscription/kustomization.yaml
+++ b/subscription/kustomization.yaml
@@ -1,8 +1,10 @@
 resources:
 - namespace.yaml
 - binding.yaml
+- bindingdrset.yaml
 - placement.yaml
 - subscription.yaml
+- application.yaml
 namespace: busybox-sample
 commonLabels:
   app: busybox-sample
