--- a/subscription/subscription.yaml
+++ b/subscription/subscription.yaml
@@ -10,5 +10,5 @@ spec:
     channel: ramen-samples/ramen-gitops
     placement:
       placementRef:
-        kind: Placement
-        name: busybox-placement
+        kind: PlacementRule
+        name: busybox-placementrule
